2004-11-15 Erwann Chenede - <erwann.chenede@sun.com>
      
	* gtk/gtkfilesel.c: fix unselect in multiple selection (#156805)

2004-11-15  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtklabel.c: Include gtkdnd.h  (#158243, Kazuki IWAMOTO)

2004-11-13  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkspinbutton.c (gtk_spin_button_new_with_range): Allow
	min == max.  (#158225, Vasco Alexandre da Silva Costa)

2004-11-12  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkcombobox.c (gtk_combo_box_class_init): Add more docs.

	* gtk/gtkfilefilter.c (gtk_file_filter_filter): Fix typo in
	docs.

	* gtk/gtklabel.c (gtk_label_do_popup): Adjust to the current
	entry popup menu.
	(gtk_label_button_press, gtk_label_button_release) 
	(gtk_label_drag_data_get): Implement DND for selectable labels.

	Make GDK+ compile with X11R5 (#148032)
	
	* gdk/x11/xsettings-client.c (xsettings_client_new): 
	* gdk/x11/gdkproperty-x11.c (_gdk_x11_precache_atoms): Only
	use XInternAtoms if it is available.

	* gdk/x11/gdkasync.c: Include XIproto.h if necessary.

	* configure.in: Check for XInternAtoms and X headers needed for
	xReply.
	
	* configure.in: Bump version.

	* === Released 2.5.5 ===
	
	* gtk/gtkwindow.c (gtk_window_activate_key_after): Add parentheses 
	around comparison in operand of &.

	* gtk/gtkcalendar.c: Replace a non-ASCII character in a comment.

2004-11-12  Matthias Clasen  <mclasen@redhat.com>

	* tests/Makefile.am (pixbuf_threads_LDADD): Make pixbuf-threads
	link.

	* NEWS: Updates

2004-11-12  Matthias Clasen  <mclasen@redhat.com>

	* tests/Makefile.am: Add pixbuf-threads

	* tests/pixbuf-threads.c: Test loading images in multiple
	threads.

2004-11-11  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Check for uxtheme.h  (#157967, J. Ali Harlow)

	* modules/engines/ms-windows/xp_theme.c: Use HAVE_UXTHEME_H
	to protect the #include <uxtheme.h> 

	* docs/tools/Makefile.am: Don't try to build doc-shooter on 
	Windows.  (#157979, J. Ali Harlow) 
