@@ -1,3 +1,8 @@
+2004-11-15  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtktreemodel.c (gtk_tree_path_prev): Return FALSE if
+	depth is 0 (noticed by Tim Janik)
+
 2004-11-15 Erwann Chenede - <erwann.chenede@sun.com>
       
 	* gtk/gtkfilesel.c: fix unselect in multiple selection (#156805)
